--- a/.github/workflows/webrtc.yml
+++ b/.github/workflows/webrtc.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: gabuild.bat
       run: .\gabuild.bat
+    - name: Uninstall System Python
+      run: choco uninstall python
     - name: Upload Windows Artifact
       uses: actions/upload-artifact@v1
       with:
